--- a/.github/workflows/runMe.yml
+++ b/.github/workflows/runMe.yml
@@ -38,6 +38,7 @@ jobs:
         working-directory: ding-tenant-app
         run: |
           mkdir fastlane
+          touch Matchfile
           echo s3_bucket=$s3 > ./fastlane/Matchfile
     
       - name: Setting s3 bucket for fastlane
