--- a/.github/workflows/runMe.yml
+++ b/.github/workflows/runMe.yml
@@ -43,9 +43,9 @@ jobs:
         run: |
             echo ${{ needs.set-env.outputs.S3_BUCKET }}
             if [[ "$OSTYPE" == "darwin"* ]]; then
-              sed -i '' 's/\$s3bucket/=("${{ needs.set-env.outputs.S3_BUCKET }}")'/g ./fastlane/Matchfile
+              sed -i '' 's/\$s3bucket/=("\${{ needs.set-env.outputs.S3_BUCKET }}")'/g ./fastlane/Matchfile
             else # assume it is Ubuntu
-              sed -i 's/\$s3bucket/=("${{ needs.set-env.outputs.S3_BUCKET }}")'/g ./fastlane/Matchfile
+              sed -i 's/\$s3bucket/=("\${{ needs.set-env.outputs.S3_BUCKET }}")'/g ./fastlane/Matchfile
             fi
             
       - name: Setup upterm session
