--- a/.github/workflows/runMe.yml
+++ b/.github/workflows/runMe.yml
@@ -37,15 +37,16 @@ jobs:
       - name: create Matchfile
         run: |
           mkdir fastlane
-          echo s3_bucket=$s3_bucket > ./fastlane/Matchfile
+          echo s3_bucket=$s3bucket > ./fastlane/Matchfile
+          less ./fastlane/Matchfile
     
       - name: Setting s3 bucket for fastlane
         run: |
             echo ${{ needs.set-env.outputs.S3_BUCKET }}
             if [[ "$OSTYPE" == "darwin"* ]]; then
-              sed -i '' 's/\$s3_bucket/=("\${{ needs.set-env.outputs.S3_BUCKET }}")'/g ./fastlane/Matchfile
+              sed -i '' 's/\$s3bucket/=("\${{ needs.set-env.outputs.S3_BUCKET }}")'/g ./fastlane/Matchfile
             else # assume it is Ubuntu
-              sed -i 's/\$s3_bucket/=("\${{ needs.set-env.outputs.S3_BUCKET }}")'/g ./fastlane/Matchfile
+              sed -i 's/\$s3bucket/=("\${{ needs.set-env.outputs.S3_BUCKET }}")'/g ./fastlane/Matchfile
             fi
             less ./fastlane/Matchfile
             
