--- a/.github/workflows/runMe.yml
+++ b/.github/workflows/runMe.yml
@@ -34,8 +34,15 @@ jobs:
           - target: ios
             runner: macos-12    
     steps:
-    
+      - name: clone reoo
+        uses: actions/checkout@v3
+        with:
+          path: ding-tenant-app
+          token: ${{ secrets.JENKINS_PAT }}
+          fetch-depth: 0    
+          
       - name: Setting s3 bucket for fastlane
+        working-directory: ding-tenant-app
         run: |
             echo ${{ needs.set-env.outputs.S3_BUCKET }}
             if [[ "$OSTYPE" == "darwin"* ]]; then
