--- a/.github/workflows/runMe.yml
+++ b/.github/workflows/runMe.yml
@@ -16,7 +16,6 @@ jobs:
     steps:
       - id: identify
         run: |
-            exit 1
             echo "deplying to production"
             echo "result=success" >> $GITHUB_OUTPUT
             echo "STOPDEPLOY=no" >> $GITHUB_OUTPUT
@@ -27,7 +26,7 @@ jobs:
   deployment:
     needs: deployServices
     runs-on: ubuntu-latest
-    if: ${{ contains(needs.deployServices.result, 'success') && needs.deployServices.outputs.STOPDEPLOY == 'no' }}
+    if: ${{ contains(needs.deployServices.result, 'success') && needs.deployServices.STOPDEPLOY == 'no' }}
     steps:
       - name: print env
         run: |
