--- a/.github/workflows/runMe.yml
+++ b/.github/workflows/runMe.yml
@@ -24,7 +24,7 @@ jobs:
   deployment:
     needs: deployServices
     runs-on: ubuntu-latest
-    if: ${{ contains(needs.deployServices.result, 'success') && needs.deployServices.STOPDEPLOY == 'no' }}
+    if: ${{ contains(needs.deployServices.result, 'success') && needs.deployServices.outputs.STOPDEPLOY == 'no' }}
     steps:
       - name: print env
         run: |
