--- a/.github/workflows/runMe.yml
+++ b/.github/workflows/runMe.yml
@@ -28,4 +28,4 @@ jobs:
     steps:
       - name: print env
         run: |
-          echo "here"
+          echo ${{ needs.deployServices.result }}
