--- a/.github/workflows/runMe.yml
+++ b/.github/workflows/runMe.yml
@@ -29,5 +29,5 @@ jobs:
       - id: test2
         run: |
           echo test env in identify step: ${{ env.TEST_ENV }}
-          echo $STOPDEPLOY         
+          echo ${{ env.STOPDEPLOY }}        
           
