--- a/.github/workflows/runMe.yml
+++ b/.github/workflows/runMe.yml
@@ -16,5 +16,5 @@ jobs:
         run: |
           export TIME=$(TZ=Asia/Jerusalem date +%H:%M:%S.%3N-%d.%m.%Y)
           echo "RESULT_FILE=$TIME-report.html" >> $GITHUB_OUTPUT
-          echo $RESULT_FILE
+          echo $TIME
 
